<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name" translatable="false">Visual Code Space</string>
    <string name="open">Open</string>
    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close drawer</string>
    <string name="close">Close</string>
    <string name="close_all">Close all</string>
    <string name="close_others">Close others</string>
    <string name="close_app">Close app</string>
    <string name="copy">Copy</string>
    <string name="copy_and_report">Copy and Report</string>
    <string name="refresh">Refresh</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="create">Create</string>
    <string name="execute">Execute</string>
    <string name="settings">Settings</string>
    <string name="general">General</string>
    <string name="reset">Reset</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="ok">OK</string>
    <string name="exit">Exit</string>
    <string name="add">Add</string>
    <string name="editor">Editor</string>
    <string name="editor_close">Close this</string>
    <string name="editor_close_others">Close others</string>
    <string name="editor_close_all">Close all</string>
    <string name="editor_save_and_close">Save &amp; Close</string>
    <string name="editor_no_files_open">No files open</string>
    <string name="editor_unsaved_files">Unsaved files</string>
    <string name="editor_unsaved_files_message">Some open files have not been saved yet!\nUnsaved files: %s</string>
    <string name="editor_action_comment_line">Comment line</string>
    <string name="editor_action_uncomment_line">Uncomment line</string>
    <string name="editor_action_long_select">Long select</string>
    <string name="editor_action_select_all">Select all</string>
    <string name="editor_action_copy">Copy</string>
    <string name="editor_action_cut">Cut</string>
    <string name="editor_action_paste">Paste</string>
    <string name="editor_action_format">Format</string>
    <string name="editor_action_explain_code">Explain Code</string>
    <string name="editor_action_import_components">Import Compose Components</string>
    <string name="editor_redo">Redo</string>
    <string name="editor_undo">Undo</string>
    <string name="editor_reload">Reload editor</string>
    <string name="editor_search">Search</string>
    <string name="editor_search_text">Search text</string>
    <string name="editor_search_replace_text">Replace text</string>
    <string name="editor_search_previous">Previous</string>
    <string name="editor_search_next">Next</string>
    <string name="editor_search_replace">Replace</string>
    <string name="editor_search_replaceall">Replace all</string>
    <string name="editor_search_close">Close</string>
    <string name="editor_search_option_ignore_case">Ignore case</string>
    <string name="editor_search_option_use_regex">Use regex</string>
    <string name="python_extracting_python_compiler">Extracting python compiler, please wait</string>
    <string name="python_downloading_python_compiler">Downloading python compiler, please wait</string>
    <string name="workspace">Workspace</string>
    <string name="file">File</string>
    <string name="files">Files</string>
    <string name="file_folder">Folder</string>
    <string name="file_explorer">File Explorer</string>
    <string name="file_empty_folder">Empty folder</string>
    <string name="file_modified_in">Modified in: %s</string>
    <string name="file_new">New file</string>
    <string name="file_new_folder">New folder</string>
    <string name="file_enter_name">Enter file name</string>
    <string name="file_rename">Rename file</string>
    <string name="file_renaming">Renaming file</string>
    <string name="file_renamed">File renamed</string>
    <string name="file_delete">Delete file</string>
    <string name="file_delete_message">Are you sure you want to delete the file: %s</string>
    <string name="file_deleting">Deleting file</string>
    <string name="file_deleted">File deleted</string>
    <string name="file_copy_path">Copy path</string>
    <string name="file_open">Open file</string>
    <string name="open_folder">Open Folder</string>
    <string name="open_recent">Open Recent</string>
    <string name="file_save">Save</string>
    <string name="file_save_as">Save as</string>
    <string name="file_save_all">Save all</string>
    <string name="file_saved">File saved</string>
    <string name="file_saved_all">Saved files</string>
    <string name="file_reload">Reload file</string>
    <string name="file_reload_unsaved_message">The file has not been saved yet. Do you want to reload it anyway?</string>
    <string name="file_storage_access">Storage access</string>
    <string name="file_storage_access_message">Visual Code Space needs access to storage to function properly.\n\nWhy should I grant storage permission?\nThis permission is required to create, delete, and save files.</string>
    <string name="file_storage_access_grant">Grant permission</string>
    <string name="terminal">Terminal</string>
    <string name="pref_category_configure">Configure</string>
    <string name="pref_category_about">About</string>
    <string name="pref_category_appearance">Appearance</string>
    <string name="pref_category_editor">Editor</string>
    <string name="pref_category_editor_tabs">Editor tabs</string>
    <string name="pref_category_file">File</string>
    <string name="pref_configure_general">General</string>
    <string name="pref_configure_general_summary">General application settings.</string>
    <string name="pref_configure_editor">Editor</string>
    <string name="pref_configure_editor_summary">General editor settings.</string>
    <string name="pref_configure_file_explorer">File Explorer</string>
    <string name="pref_configure_file_explorer_summary">General file explorer settings.</string>
    <string name="pref_about_github">GitHub</string>
    <string name="pref_about_github_summary">Visual Code Space is open source!</string>
    <string name="pref_aparence_uimode">UI Mode</string>
    <string name="pref_aparence_uimode_summary">Choose light or dark mode.</string>
    <string name="pref_aparence_uimode_value_followsys">Follow system</string>
    <string name="pref_aparence_uimode_value_dark">Dark</string>
    <string name="pref_aparence_uimode_value_light">Light</string>
    <string name="pref_aparence_materialyou">Dynamic theme(Material You)</string>
    <string name="pref_aparence_materialyou_summary">The app follows the device\'s theme colors (requires restart).</string>
    <string name="pref_editor_fontsize">Editor font size</string>
    <string name="pref_editor_fontsize_summary">Sets the editor font size.</string>
    <string name="pref_editor_indent">Editor indent size</string>
    <string name="pref_editor_indent_summary">Set how much indentation the editor should use for new lines and code blocks.</string>
    <string name="pref_editor_font">Editor font</string>
    <string name="pref_editor_font_summary">Set the editor font.</string>
    <string name="pref_editor_font_value_firacode">Fira Code Regular</string>
    <string name="pref_editor_font_value_jetbrains">JetBrains Mono</string>
    <string name="pref_editor_colorscheme">Editor color scheme</string>
    <string name="pref_editor_colorscheme_summary">Choose a color scheme for the editor.</string>
    <string name="pref_editor_colorscheme_value_followui">Follow UI Mode</string>
    <string name="pref_editor_colorscheme_value_custom">Custom TextMate Schema File</string>
    <string name="pref_editor_stickyscroll">Sticky scroll</string>
    <string name="pref_editor_stickyscroll_summary">Show current scope at top of editor.</string>
    <string name="pref_editor_fontligatures">Font ligatures</string>
    <string name="pref_editor_fontligatures_summary">Special character ligatures in the editor.</string>
    <string name="pref_editor_wordwrap">Word wrap</string>
    <string name="pref_editor_wordwrap_summary">Wraps long lines and disables horizontal scrolling in the editor.</string>
    <string name="pref_editor_linenumber">Line number</string>
    <string name="pref_editor_linenumber_summary">Show line numbers in the editor.</string>
    <string name="pref_editor_usetab">Use tab</string>
    <string name="pref_editor_usetab_summary">Use tabs (\\t) to indent instead of spaces in the editor.</string>
    <string name="pref_editor_deletelineonbackspace">Delete empty lines on backspace</string>
    <string name="pref_editor_deletelineonbackspace_summary">Quickly delete empty lines with backspace.</string>
    <string name="pref_editor_deleteindentonbackspace">Delete indent on backspace</string>
    <string name="pref_editor_deleteindentonbackspace_summary">Quickly delete indents with backspace.</string>
    <string name="pref_editor_tabs_autosave">Autosave</string>
    <string name="pref_editor_tabs_autosave_summary">Automatically saves files opened while typing in the editor.</string>
    <string name="pref_file_showhiddenfiles">Show hidden files</string>
    <string name="pref_file_showhiddenfiles_summary">If enabled, shows files and folders whose names start with \".\".</string>
    <string name="pref_configure_plugins_summary">Manage plugins</string>
    <string name="pref_configure_plugins">Plugins</string>
    <string name="pref_remember_last_opened_file_title">Remember Last Opened File</string>
    <string name="pref_remember_last_opened_file_summary">Automatically reopen the last file you were working on at startup.</string>
    <string name="follow_system_theme_title">Follow System Theme</string>
    <string name="follow_system_theme_summary_true">Following system theme settings</string>
    <string name="follow_system_theme_summary_false">Not following system theme</string>
    <string name="use_dark_mode_title">Use Dark Mode</string>
    <string name="use_dark_mode_summary_enabled">Dark mode is enabled</string>
    <string name="use_dark_mode_summary_disabled">Dark mode is disabled</string>
    <string name="use_amoled_mode_title">Use Amoled Mode</string>
    <string name="use_amoled_mode_summary_enabled">AMOLED mode is enabled</string>
    <string name="use_amoled_mode_summary_disabled">AMOLED mode is disabled</string>
    <string name="dynamic_colors_title">Dynamic Colors</string>
    <string name="dynamic_colors_summary_enabled">Dynamic color mode is enabled</string>
    <string name="dynamic_colors_summary_disabled">Dynamic color mode is disabled</string>
    <string name="enable_gesture_in_drawer_title">Enable gesture in drawer</string>
    <string name="enable_gesture_in_drawer_summary">Enable gesture in file tree drawer</string>
    <string name="file_settings">File Settings</string>
    <string name="show_hidden_files_title">Show Hidden Files</string>
    <string name="show_hidden_files_summary_true">Hidden files are displayed</string>
    <string name="show_hidden_files_summary_false">Hidden files are not displayed</string>
    <string name="remember_last_opened_file_title">Remember Last Opened File</string>
    <string name="remember_last_opened_file_summary_true">Will remember the last opened file</string>
    <string name="remember_last_opened_file_summary_false">Will not remember the last opened file</string>
    <string name="editor_settings">Editor Settings</string>
    <string name="current_editor">Current Editor</string>
    <string name="font_size">Font Size</string>
    <string name="font_size_value">%1$d sp</string>
    <string name="indent_size">Indent Size</string>
    <string name="indent_size_summary">Indent size: %1$d spaces</string>
    <string name="font_family">Font Family</string>
    <string name="font_family_summary">Choose the font family for the editor</string>
    <string name="color_scheme">Color Scheme</string>
</resources>