<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">
  <item
    android:id="@+id/menu_execute"
    android:icon="@drawable/ic_play"
    android:title="@string/execute"
    android:visible="false"
    app:showAsAction="always" />

  <item
    android:id="@+id/menu_undo"
    android:icon="@drawable/ic_undo"
    android:title="@string/editor_undo"
    android:visible="false"
    app:showAsAction="always" />

  <item
    android:id="@+id/menu_redo"
    android:icon="@drawable/ic_redo"
    android:title="@string/editor_redo"
    android:visible="false"
    app:showAsAction="always" />

  <item
    android:id="@+id/menu_search"
    android:icon="@drawable/ic_search"
    android:title="@string/editor_search"
    android:visible="false" />

  <item
    android:id="@+id/menu_folder"
    android:icon="@drawable/ic_folder"
    android:title="@string/file"
    app:showAsAction="always">
    <menu>
      <item
        android:id="@+id/menu_new_file"
        android:icon="@drawable/ic_file_add"
        android:title="@string/file_new" />

      <item
        android:id="@+id/menu_open_file"
        android:icon="@drawable/ic_file"
        android:title="@string/file_open" />

      <item
        android:id="@+id/menu_save"
        android:icon="@drawable/ic_save"
        android:title="@string/file_save"
        android:enabled="false" />

      <item
        android:id="@+id/menu_save_as"
        android:icon="@drawable/ic_save"
        android:title="@string/file_save_as"
        android:enabled="false" />

      <item
        android:id="@+id/menu_save_all"
        android:icon="@drawable/ic_save_all"
        android:title="@string/file_save_all"
        android:enabled="false" />

      <item
        android:id="@+id/menu_reload"
        android:icon="@drawable/ic_refresh"
        android:title="@string/file_reload"
        android:enabled="false" />
    </menu>
  </item>
</menu>